new proj/src/objects/GE_PRM_App_Structure__c.object
<CustomObject>
    <fields>
        <fullName>GE_PRM_Relationship_Starting_Date__c</fullName>
        <description>Relationship Starting Date</description>
        <inlineHelpText>Relationship Starting Date</inlineHelpText>
        <label>Relationship Starting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Relationship__c</fullName>
        <description>Relationship</description>
        <inlineHelpText>Relationship</inlineHelpText>
        <label>Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Ship_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as Shipping Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Shipping_Address_1__c</fullName>
        <description>Address 1</description>
        <inlineHelpText>Address 1</inlineHelpText>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Shipping_Address_2__c</fullName>
        <description>Address 2</description>
        <inlineHelpText>Address 2</inlineHelpText>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Shipping_Address__c</fullName>
        <formula>GE_PRM_Shipping_Address_1__c + &apos; &apos; +
GE_PRM_Shipping_Address_2__c +  IF(GE_PRM_Shipping_City__c =&apos;&apos;, &apos;&apos;, &apos; , &apos;) +
GE_PRM_Shipping_City__c + IF(GE_PRM_Shipping_State_Province__c =&apos;&apos;, &apos;&apos;, &apos; , &apos;) +
GE_PRM_Shipping_State_Province__c + IF(TEXT(GE_PRM_Shipping_Country__c) =&apos;&apos;, &apos;&apos;, &apos; , &apos;)  +
TEXT(GE_PRM_Shipping_Country__c) + IF(GE_PRM_Shipping_Postal_Code__c =&apos;&apos;, &apos;&apos;, &apos; - &apos;)+  GE_PRM_Shipping_Postal_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Shipping_City__c</fullName>
        <description>City</description>
        <inlineHelpText>City</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Shipping_Country__c</fullName>
        <description>Country</description>
        <inlineHelpText>Country</inlineHelpText>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONAIRE, SINT EUSTATIUS AND SABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA-HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOUVET ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Shipping_Email__c</fullName>
        <description>Email</description>
        <inlineHelpText>Email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Shipping_Fax__c</fullName>
        <description>Fax</description>
        <inlineHelpText>Fax</inlineHelpText>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Shipping_Phone__c</fullName>
        <description>Phone</description>
        <inlineHelpText>Phone</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Shipping_Postal_Code__c</fullName>
        <description>Postal Code</description>
        <inlineHelpText>Postal Code</inlineHelpText>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Shipping_State_Province__c</fullName>
        <description>State/Province</description>
        <inlineHelpText>State/Province</inlineHelpText>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Specific_Authorized_Region__c</fullName>
        <inlineHelpText>Authorized coverage territory</inlineHelpText>
        <label>Specific Authorized Territory</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Start_Date__c</fullName>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Status</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Termination_Non_Renewal_Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Termination/Non-Renewal Checklist</label>
        <referenceTo>GE_PRM_Termination_Checklist__c</referenceTo>
        <relationshipName>Sales_Team_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Title__c</fullName>
        <description>Title</description>
        <inlineHelpText>Title</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Trained_Employee_Name__c</fullName>
        <label>Trained Employee Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Training_Date__c</fullName>
        <label>Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Training_Place__c</fullName>
        <label>Training Place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Officer/Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Reference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization or Entity Affiliated with Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal Individuals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accountant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial References</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litigation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Offices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Countries Company Licensed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommendation Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Uploaded_Date__c</fullName>
        <formula>CreatedDate</formula>
        <label>Uploaded Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Use_Ordering__c</fullName>
        <description>Use Ordering Address</description>
        <inlineHelpText>Does the company have a physical address from which orders are processed?</inlineHelpText>
        <label>Use Ordering Address</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_PRM_Years_of_Service__c</fullName>
        <description>Years of Service</description>
        <inlineHelpText>Years of Service</inlineHelpText>
        <label>Years of Service</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_PRM_of_time_on_GE__c</fullName>
        <inlineHelpText>What % of time is this sales person dedicated to selling GE products/services?</inlineHelpText>
        <label>% of Time on GE</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_PW_Country_of_nationality__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>AFGHANISTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALAND ISLANDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBANIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDORRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANGUILLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTARCTICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANTIGUA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMENIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARUBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUSTRIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZERBAIJAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHAMAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAHRAIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BANGLADESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BARBADOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELGIUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BELIZE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BENIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BERMUDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BHUTAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLIVIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BONAIRE, SINT EUSTATIUS AND SABA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOSNIA-HERZEGOVINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOTSWANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOUVET ISLAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRAZIL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Partner Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>App_Structure</fullName>
        <columns>NAME</columns>
        <columns>GE_PRM_Appointment__c</columns>
        <columns>GE_PRM_Type__c</columns>
        <columns>GE_PRM_Ownership__c</columns>
        <columns>GE_PRM_Name__c</columns>
        <columns>GE_PRM_Start_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GE_PRM_Appointment__c</field>
            <operation>equals</operation>
            <value>00007739</value>
        </filters>
        <label>App Structure</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>App-{000000}</displayFormat>
        <label>Sales Team Profile</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Informations</pluralLabel>
    <recordTypes>
        <fullName>GE_PRM_Branch_Office_Location</fullName>
        <active>true</active>
        <description>Recordtype selection for branch office locations</description>
        <label>Branch Office Location</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PRM_Government_Training</fullName>
        <active>true</active>
        <description>Record Type for Government Training</description>
        <label>Government Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_PRM_Subsidiaries</fullName>
        <active>true</active>
        <description>Creation of Partner Subsidiaries and Affiliated Entities</description>
        <label>Subsidiaries</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recommendation_Country</fullName>
        <active>true</active>
        <description>Creation of Recommendation Country for Recommendation</description>
        <label>Recommendation Country</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Team_Profile</fullName>
        <active>true</active>
        <label>Sales Team Profile</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Plan_Is_Approved</fullName>
        <active>false</active>
        <description>If Account Plan is &apos;Approved&apos; user shouldn&apos;t be able to create or edit Sales Team Profile</description>
        <errorConditionFormula>AND(AND( $Profile.Name &lt;&gt; &apos;GE_ES System Administrator&apos;, $Profile.Name &lt;&gt; &apos;System Administrator&apos;) ,ISPICKVAL( GE_PRM_Account_Plan__r.GE_PRM_Status__c , &apos;Approved&apos;))</errorConditionFormula>
        <errorMessage>You cannot create/edit Sales Team Profile since Account Plan is Approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_OG_KYC_Accounts</fullName>
        <active>false</active>
        <errorConditionFormula>AND( GE_PRM_Delete__c == False , GE_PRM_Phone__c != Null ,
NOT(REGEX(GE_PRM_Phone__c , &quot;\\D*?(\\d\\D*?){10}&quot;)))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Phone__c</errorDisplayField>
        <errorMessage>please enter phone number in correct format</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Accountants</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c  = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Accountant&apos;),   OR( GE_PRM_Name__c    = &apos;&apos;, GE_PRM_Name__c  = null))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Name__c</errorDisplayField>
        <errorMessage>You must enter Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Accountants_Complete_Address</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c  = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Accountant&apos;),   OR( GE_PRM_Complete_Address__c    = &apos;&apos;, GE_PRM_Complete_Address__c  = null))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Complete_Address__c</errorDisplayField>
        <errorMessage>You must enter Complete Address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Accountants_Contact</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c  = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Accountant&apos;),   OR( GE_PRM_Contact__c    = &apos;&apos;, GE_PRM_Contact__c  = null))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Contact__c</errorDisplayField>
        <errorMessage>You must enter Contact Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Accountants_Phone</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c  = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Accountant&apos;),   OR( GE_PRM_Phone__c    = &apos;&apos;, GE_PRM_Phone__c  = null))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Phone__c</errorDisplayField>
        <errorMessage>You must enter Phone</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Branch_Name_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Branch Offices&apos;), OR(GE_PRM_Branch_Offices__c = &apos;&apos;, GE_PRM_Branch_Offices__c = null))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Branch_Offices__c</errorDisplayField>
        <errorMessage>Please enter Branch Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Branch_Offices_Ordering_Address</fullName>
        <active>true</active>
        <errorConditionFormula>AND(TEXT(GE_PRM_Use_Ordering__c) = &apos;Yes&apos;, OR( ISBLANK(GE_PRM_Ordering_Address_1__c), ISBLANK( GE_PRM_Ordering_City__c ), ISBLANK( GE_PRM_Ordering_Postal_Code__c ), TEXT( GE_PRM_Ordering_Country__c ) = &apos;&apos;, ISBLANK( GE_PRM_Ordering_Phone__c ),  ISBLANK( GE_PRM_Ordering_Email__c )  ))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Ordering_Address_1__c</errorDisplayField>
        <errorMessage>Please Provide Address1, City, Postal Code, Country, Phone and Email on Ordering Address If the company have a physical address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Financial_References</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Financial References&apos;), OR(GE_PRM_Name__c = &apos;&apos;, GE_PRM_Name__c = null))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Name__c</errorDisplayField>
        <errorMessage>You must enter Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Financial_References_Address</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Financial References&apos;), OR( GE_PRM_Complete_Address__c = &apos;&apos;, GE_PRM_Complete_Address__c = null))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Complete_Address__c</errorDisplayField>
        <errorMessage>You must enter Address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Financial_References_Contact</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c = false, GE_HQ_KYC__r.GE_HQ_Account__c = null, ISPICKVAL( GE_PRM_Type__c ,&apos;Financial References&apos;), OR( GE_PRM_Contact__c = &apos;&apos;,GE_PRM_Contact__c = null))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Contact__c</errorDisplayField>
        <errorMessage>You must enter Name of Contact</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Financial_References_Phone</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Financial References&apos;), OR( GE_PRM_Phone__c = &apos;&apos;,GE_PRM_Phone__c = null))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Phone__c</errorDisplayField>
        <errorMessage>You must enter Phone</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_General_References</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c  = false, ISPICKVAL( GE_PRM_Type__c ,&apos;General Reference&apos;),   OR( GE_PRM_Company_Name__c   = &apos;&apos;, GE_PRM_Company_Name__c  = null))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Company_Name__c</errorDisplayField>
        <errorMessage>You must enter Company Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_General_References_Complete_Legal</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c  = false, ISPICKVAL( GE_PRM_Type__c ,&apos;General Reference&apos;),   OR(  GE_PRM_Complete_Address__c    = &apos;&apos;,  GE_PRM_Complete_Address__c   = null))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Complete_Address__c</errorDisplayField>
        <errorMessage>You must enter complete legal address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_General_References_Contact</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c  = false, ISPICKVAL( GE_PRM_Type__c ,&apos;General Reference&apos;),   OR( GE_PRM_Contact__c   = &apos;&apos;, GE_PRM_Contact__c  = null))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Contact__c</errorDisplayField>
        <errorMessage>You must enter Contact Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_General_References_Email</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c  = false, ISPICKVAL( GE_PRM_Type__c ,&apos;General Reference&apos;),   OR( GE_PRM_Email__c   = &apos;&apos;, GE_PRM_Email__c  = null))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Email__c</errorDisplayField>
        <errorMessage>You must enter Email</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_General_References_External_Email</fullName>
        <active>false</active>
        <errorConditionFormula>AND
( 
     GE_PRM_Delete__c  = false, 
      ISPICKVAL( GE_PRM_Type__c ,&apos;General Reference&apos;) ,
      CONTAINS( UPPER(GE_PRM_Email__c), &apos;@GE.COM&apos;) ,
      NOT( ISPICKVAL( GE_PRM_Appointment__r.GE_PRM_Status__c ,&apos;Submitted&apos;) ),
      NOT( ISPICKVAL( GE_PRM_Appointment__r.GE_PRM_Status__c , &apos;Approved&apos;) ),
      NOT( ISPICKVAL( GE_PRM_Appointment__r.GE_PRM_Status__c , &apos;Rejected&apos;) ) 
     )</errorConditionFormula>
        <errorDisplayField>GE_PRM_Email__c</errorDisplayField>
        <errorMessage>GE internal references are not acceptable, please provide non-GE reference</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_General_References_Phone</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c  = false, ISPICKVAL( GE_PRM_Type__c ,&apos;General Reference&apos;),   OR( GE_PRM_Phone__c   = &apos;&apos;, GE_PRM_Phone__c  = null))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Phone__c</errorDisplayField>
        <errorMessage>You must enter Phone</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Identity_Country_Licensed</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Countries Company Licensed&apos;),  ISBLANK(TEXT(GE_PRM_Countries__c)) )</errorConditionFormula>
        <errorDisplayField>GE_PRM_Countries__c</errorDisplayField>
        <errorMessage>Country Company Licensed for business is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Is_Agreement_Page_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR(NOT(ISNEW()),(ISPICKVAL(GE_PRM_Recommendation__r.GE_PRM_Agreement_Page__c,&apos;Completed&apos;)) ),
ISPICKVAL(GE_PRM_Type__c , &apos;Recommendation Country&apos;),
OR(
ISPICKVAL(GE_PRM_Countries__c, &apos;&apos;),
ISBLANK(GE_PRM_Specific_Authorized_Region__c)
)
)</errorConditionFormula>
        <errorMessage>This page is not yet complete. Please fill in all the manadatory(*) fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Is_Branch_Ofc_Detail_Page_Compltd</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(GE_PRM_Branch_Office_Details_Page__c, &apos;Completed&apos;), ISPICKVAL(GE_PRM_Type__c, &apos;Branch Offices&apos;),
OR( ISBLANK(GE_PRM_Legal_Address_1__c),
ISBLANK(GE_PRM_Legal_City__c),
ISBLANK(GE_PRM_Legal_Postal_Code__c),
ISPICKVAL(GE_PRM_Legal_Country__c, &apos;&apos;) ,
ISBLANK(GE_PRM_Legal_Phone__c),
ISBLANK(GE_PRM_Legal_Email__c),
ISBLANK(GE_PRM_Shipping_Address_1__c),
ISBLANK(GE_PRM_Shipping_City__c),
ISBLANK(GE_PRM_Shipping_Postal_Code__c),
ISPICKVAL(GE_PRM_Shipping_Country__c, &apos;&apos;) ,
ISBLANK(GE_PRM_Shipping_Phone__c),
ISBLANK(GE_PRM_Shipping_Email__c),
ISBLANK(GE_PRM_Billing_Address_1__c),
ISBLANK(GE_PRM_Billing_City__c),
ISBLANK(GE_PRM_Billing_Postal_Code__c),
ISPICKVAL(GE_PRM_Billing_Country__c, &apos;&apos;) ,
ISBLANK(GE_PRM_Billing_Phone__c),
ISBLANK(GE_PRM_Billing_Email__c),ISBLANK(GE_PRM_Branch_Offices__c),
ISPICKVAL(GE_PRM_Use_Ordering__c, &apos;&apos;)
) )</errorConditionFormula>
        <errorDisplayField>GE_PRM_Branch_Office_Details_Page__c</errorDisplayField>
        <errorMessage>This page is not yet complete. Please fill in all the manadatory(*) fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Limit_Percentage</fullName>
        <active>true</active>
        <description>This validation rule is related to PRM. It will limit the user to enter the Ownership% not more than 100</description>
        <errorConditionFormula>GE_PRM_Ownership__c  &gt; 1.00</errorConditionFormula>
        <errorDisplayField>GE_PRM_Ownership__c</errorDisplayField>
        <errorMessage>%Ownership can not be more than 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Main_Owners</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c  = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Owner&apos;),   OR(GE_PRM_Name__c  = &apos;&apos;, GE_PRM_Name__c  = null))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Name__c</errorDisplayField>
        <errorMessage>You must enter Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Main_Owners_Ownership</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c  = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Owner&apos;), OR(GE_PRM_Ownership__c == null, ISBLANK(GE_PRM_Ownership__c)))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Ownership__c</errorDisplayField>
        <errorMessage>You must enter % Ownership</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Notes_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Notes&apos;),  ISBLANK( GE_PRM_Notes_Questions_Etc__c) )</errorConditionFormula>
        <errorDisplayField>GE_PRM_Notes_Questions_Etc__c</errorDisplayField>
        <errorMessage>You must enter the value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Officers_Country_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Officer/Director&apos;),  TEXT( GE_PRM_Countries__c) = &apos;&apos; , GE_PRM_Appointment__r.Id &lt;&gt; &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>GE_PRM_Countries__c</errorDisplayField>
        <errorMessage>You must enter Nationality</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Officers_Directors</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c  = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Officer/Director&apos;),   OR(GE_PRM_Name__c  = &apos;&apos;, GE_PRM_Name__c  = null))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Name__c</errorDisplayField>
        <errorMessage>You must enter Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Officers_Start_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Delete__c = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Officer/Director&apos;),  ISBLANK(GE_PRM_Start_Date__c) , GE_PRM_Appointment__r.Id &lt;&gt; &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>GE_PRM_Start_Date__c</errorDisplayField>
        <errorMessage>You must enter Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Officers_Title_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Appointment__c &lt;&gt; null, GE_PRM_Delete__c = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Officer/Director&apos;),  ISBLANK(GE_PRM_Title__c) )</errorConditionFormula>
        <errorDisplayField>GE_PRM_Title__c</errorDisplayField>
        <errorMessage>You must enter Title</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Organization_Entity</fullName>
        <active>true</active>
        <errorConditionFormula>AND($RecordType.DeveloperName &lt;&gt; &apos;GE_PRM_Subsidiaries&apos;,GE_PRM_Appointment__c &lt;&gt; null, GE_PRM_Delete__c  = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Organization or Entity Affiliated with Applicant&apos;),   OR(  GE_PRM_Name__c   = &apos;&apos;, GE_PRM_Name__c  = null))</errorConditionFormula>
        <errorDisplayField>GE_PRM_Name__c</errorDisplayField>
        <errorMessage>You must enter Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Other_Entity_Activity</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Appointment__c &lt;&gt; null, GE_PRM_Delete__c = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Organization or Entity Affiliated with Applicant&apos;),  ISBLANK(  GE_PRM_Activity__c  ) )</errorConditionFormula>
        <errorDisplayField>GE_PRM_Activity__c</errorDisplayField>
        <errorMessage>Please enter Activity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Other_Entity_City_Registration</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Appointment__c &lt;&gt; null, GE_PRM_Delete__c = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Organization or Entity Affiliated with Applicant&apos;),  ISBLANK( GE_PRM_City_of_Registration__c  ) )</errorConditionFormula>
        <errorDisplayField>GE_PRM_City_of_Registration__c</errorDisplayField>
        <errorMessage>Please enter City of Registration</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_PRM_Other_Entity_Complete_Legal_Add</fullName>
        <active>true</active>
        <errorConditionFormula>AND(GE_PRM_Appointment__c &lt;&gt; null, GE_PRM_Delete__c = false, ISPICKVAL( GE_PRM_Type__c ,&apos;Organization or Entity Affiliated with Applicant&apos;),  ISBLANK( GE_PRM_Complete_Address__c ) )</errorConditionFormula>
        <errorDisplayField>GE_PRM_Complete_Address__c</errorDisplayField>
        <errorMessage>Please enter Complete Legal Address</errorMessage>
    </validationRules>
</CustomObject>